upgrades for 2.8.0 rebasing and applying sign-off upgrades for 2.5.0: new versions of things, add some docs, upgrade gradlew
Signed-off-by: Mark Cohen <markcoh@amazon.com>